# OpenTuringCompiler

./: .gitignore  BasicScopes.cpp  BasicScopes.h  CMakeLists.txt  Executor.cpp  Makefile  Message.cpp  Message.h  Readme.md  Scope.cpp  Scope.h  ScopeManager.cpp  StdLib.cpp  TODO.yaml  TOTEST.md  Turing.g  TuringType.cpp  TuringType.h  TypeManager.cpp  TypeManager.h  ast.cpp  cmakeBuild.sh  codegen.cpp  codegen.h  language.cpp  main.cpp  openTuringLibDefs.h  openTuringRuntimeError.cpp  openTuringRuntimeError.h  postdefs.t  predefs.t  quotinate_util.rb  test.t  test13.t  testcompile.txt  testcompile13.txt  tokens.def
Turing Compiler.xcodeproj/: project.pbxproj
Turing Compiler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Turing Compiler.xcodeproj/project.xcworkspace/xcuserdata/tristan.xcuserdatad/: UserInterfaceState.xcuserstate
Turing Compiler.xcodeproj/xcuserdata/tristan.xcuserdatad/xcschemes/: Turing Compiler.xcscheme  xcschememanagement.plist
cmake/modules/: FindSFML.cmake
commonlib/: CMakeLists.txt
commonlib/include/TuringCommon/: FileSystem.h  IDManager.h  LibDefs.h  RuntimeError.h  StreamManager.h
commonlib/src/: FileSystem.cpp  RuntimeError.cpp  StreamManager.cpp
src/: ASTSource.cpp  ASTSource.h  BasicScopes.cpp  BasicScopes.h  CMakeLists.txt  Executor.cpp  Executor.h  FileSource.cpp  FileSource.h  LibManager.cpp  LibManager.h  Message.cpp  Message.h  Scope.cpp  Scope.h  ScopeManager.cpp  ScopeManager.h  StdLib.cpp  Symbol.cpp  Symbol.h  Turing.g  TuringType.cpp  TuringType.h  TuringValue.h  TypeManager.cpp  TypeManager.h  VarDecl.h  ast.cpp  ast.h  codegen.cpp  codegen.h  language.h  main.cpp  tokens.def
stdlib/: CMakeLists.txt
stdlib-sfml/: CMakeLists.txt
stdlib-sfml/includes/: Draw.t  Font.t  Input.t  Pic.t  Time.t  View.t  Window.t  stdlib-sfml-post.t  stdlib-sfml.t
stdlib-sfml/src/: Draw.cpp  Font.cpp  Font.h  IDManager.h  Input.cpp  Main.cpp  Main.h  Pic.cpp  RGB.cpp  RGB.h  Time.cpp  View.cpp  Window.cpp  WindowManager.cpp  WindowManager.h
stdlib/includes/: Excepts.t  Math.t  Time.t  Typeconv.t  stdlib.t
stdlib/src/: Main.cpp  Math.cpp  Time.cpp  Typeconv.cpp  openTuringRuntimeError.h
test/: 3DSphere.t  CMakeLists.txt  demoCurtains.t  demoHomer.t  demoMandelbrot.t  demoParticles.t  demoTinyBits.t  demoTwist.t  heapsort.t  sierpinskidraw.t  test.t  test13.t  testFlexibleArr.t  testGetAndPut.t  testmath.t  testplanetbench.t  teststdlib.t  timccctest.t  tonymathtest.t
test/demo3D/: 3dlib.t  demo3D.t  drawing2.t  matrices.t  types.t
